Initial example for Windows